--- a/pages/Music/index.wxss
+++ b/pages/Music/index.wxss
@@ -1,1 +1,30 @@
-/* pages/Music/index.wxss */
+page {
+  --search-padding: 20rpx 0;
+  box-sizing: border-box;
+  padding: 0 20rpx;
+}
+
+/* banner */
+.banner {
+  border-radius: 10rpx;
+  overflow: hidden;
+}
+
+.swiper-item .swiper-img {
+  width: 100%;
+  height: 100%;
+}
+
+/* recommend */
+
+/* hot-playlist */
+.hot-playlist {
+  display: flex;
+  justify-content: space-between;
+}
+
+.hot-playlist .hot-item {
+  flex-shrink: 0;
+  margin-right: 14rpx;
+  width: 30vw;
+}
